# gesture_detection_dll

./: CMakeLists.txt  binary_mask_creator.cpp  binary_mask_creator.h  gesture_detector.cpp  gesture_detector.h  gestures.cpp  hand_roi.cpp  hand_roi.h
